--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 # JWT configuration
-app.jwtSecret=${JWT_SECRET}
+app.jwtSecret=socialNetworkNguyenQuangAnh#@#$).,/43d
 app.jwtExpirationInMs=900000
 
 
@@ -31,10 +31,11 @@ cloudinary.api.key=418379238796144
 cloudinary.api.secret=65camcQR1OqabThD2gygQ9YSFI0
 
 # Google OAuth
-spring.security.oauth2.client.registration.google.client-id=1074537656487-xxx.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=GOCSPX-xxxx
+spring.security.oauth2.client.registration.google.client-id=1074537656487-n19mst2f7ochcnqfa8pj3lfv2ssaefjk.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
 spring.security.oauth2.client.registration.google.scope=openid,profile,email
+
 
 # GitHub OAuth
 spring.security.oauth2.client.registration.github.client-id=Ov23livboXJam9P1R0kE
